<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.oriol.tetic.trasteando.DetalleActivity">


    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmarDatos"
        android:textSize="@dimen/tamaño_titulo"
        android:textStyle="bold"

        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginTop="@dimen/magen_titulo"
        android:textSize="@dimen/tamaño_nombre"
        android:textAlignment="center"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tvNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nacimiento"
            android:textSize="@dimen/tamaño_varios"
            android:layout_marginTop="@dimen/margen_entrelineas"
            />
        
        <TextView
            android:id="@+id/tvCampoFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="04/7/2011"
            android:textSize="@dimen/tamaño_varios"
            android:layout_marginTop="@dimen/margen_entrelineas"
            android:layout_marginLeft="@dimen/margen_left"/>
        


    </LinearLayout>
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margen_entrelineas">

    <ImageView
        android:id="@+id/iconTelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tel_fono_48"
        />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="@dimen/tamaño_varios"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/tvCampoTelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txttelefono"
        android:textSize="@dimen/tamaño_varios"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margen_left"
        android:onClick="llamar"/>


</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen_entrelineas">

        <ImageView
            android:id="@+id/iconEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_48"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/tamaño_varios"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/tvCampoEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtemail"
            android:textSize="@dimen/tamaño_varios"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margen_left"
            android:onClick="enviarMail"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="@dimen/tamaño_varios"
        android:layout_marginTop="@dimen/margen_entrelineas"
        />

    <TextView
        android:id="@+id/tvCampoDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtdescripcion"
        android:layout_marginTop="@dimen/margen_entrelineas"
        />

    <Button
        android:id="@+id/botonEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magen_titulo"
        android:text="@string/botoneditar"
        android:theme="@style/MiBotonSiguiente"/>


</LinearLayout>


