<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.oriol.tetic.trasteando.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/nombreComplet"
            android:ems="10"
            android:id="@+id/editNombreCompleto"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechNacimient"
            android:textSize="@dimen/text_view"
            />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_he_date"
            android:id="@+id/datePicker"
            android:clickable="true"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/tlf"
        android:ems="10"
        android:id="@+id/editTelf" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        android:ems="10"
        android:id="@+id/editEmail" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/decContacto"
        android:ems="10"
        android:id="@+id/editDescripcion" />

    <Button
        android:text="@string/botonSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSiguiente"
        android:theme="@style/MiBotonSiguiente"
        android:layout_margin="10dp"
        />






</LinearLayout>
